09-kubernetes-platform-engineering/manifests/deployment.yaml
# manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-audit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: security-audit
  template:
    metadata:
      labels:
        app: security-audit
    spec:
      serviceAccountName: security-audit-sa
      containers:
        - name: security-audit
          image: 835384818260.dkr.ecr.us-east-1.amazonaws.com/security-audit:v1
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
